--- a/index.html
+++ b/index.html
@@ -5,14 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
-    <nav></nav>
+    <nav>
+        <a href="#"><i class="fas fa-home"></i></a>
+        <a href="#"><i class="fas fa-user"></i></a>
+        <a id="user" href="#"><i class="fas fa-images"></i></a>
+    </nav>
+    <header>
+      <img class="item" src="img/OTAM.jpg" alt="">
+      <img class="item" src="img/otam 2.jpg" alt="">
+      <img class="item" src="img/otam 3.jpg" alt="">
+      <img class="items" src="img/masjid.jpg" alt="">
+      <img class="items1" src="img/royal.jpg" alt="">
+      <img class="items2" src="img/russia.jpg" alt="">
+      <img class="items3" src="img/abdulloka.jpg" alt="">
+      <h2 class="x">Cancel</h2>
+    </header>
+     <section>
+         <h1 class="name">Hello, My name is Rosiljon</h1>
+         <p class="infor">Hello, My full name is MuhammadRasul, I studied at 24 secondary schools in Namangan.</p>
+         <div class="box">
+             <img src="img/OTAM.jpg" alt="">
+         </div>
+     </section>
 
 
 
-
-
+<script src="app.js"></script>
 </body>
 </html>
