--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <title>Document</title>
 </head>
 <body>
+
     <nav>
-        <a href="#"><i class="fas fa-home"></i></a>
+        <a id="home" href="#"><i class="fas fa-home"></i></a>
         <a href="#"><i class="fas fa-user"></i></a>
         <a id="user" href="#"><i class="fas fa-images"></i></a>
+        <a class="users" href="#"><i class="fab fa-angellist"></i></a>
     </nav>
+    <div class="father">
     <header>
       <img class="item" src="img/OTAM.jpg" alt="">
       <img class="item" src="img/otam 2.jpg" alt="">
@@ -31,9 +34,21 @@
              <img src="img/OTAM.jpg" alt="">
          </div>
      </section>
-
-
-
+    </div>
+     <main>
+        <div id="container">
+            <input type="color"><button class="btn">Change</button>
+            <i style="font-size: 170px; color: #E85823;" class="fab fa-html5"></i>
+            <i style="font-size: 170px; color: #0078BD;" class="fab fa-css3-alt"></i>
+            <i style="font-size: 170px; color: #754FAD;" class="fab fa-bootstrap"></i>
+            <i style="font-size: 170px; color: #EFD81D;" class="fab fa-js"></i>
+            <i style="font-size: 170px; color: #5ED3F3;" class="fab fa-react"></i>
+            <i style="font-size: 170px; color: #3C823B;" class="fab fa-node"></i>
+            <i style="font-size: 170px; color: #E52024;" class="fab fa-java"></i>
+            <i style="font-size: 170px; color: #376E9D;" class="fab fa-python"></i>
+          </div>
+     </main>
+    
 <script src="app.js"></script>
 </body>
 </html>
